修改项目pom文件，使得auth能找到main